--- a/templates/CustomTemplate.xml
+++ b/templates/CustomTemplate.xml
@@ -1,5 +1,5 @@
 <templateSet group="CustomTemplate">
-  <template name="tab" value="/**&#10;  * Description : &#10;  *&#10;  * Author     : TAN&#10;  *&#10;  * Time       : $date$ $time$&#10;  */" toReformat="true" toShortenFQNames="true" useStaticImport="true">
+  <template name="tab" value="/**&#10;  * Description : &#10;  *&#10;  * Author     : TAN&#10;  *&#10;  * Time       : $date$ $time$&#10;  */" description="" toReformat="true" toShortenFQNames="true" useStaticImport="true">
     <variable name="date" expression="date()" defaultValue="data()" alwaysStopAt="false" />
     <variable name="time" expression="time()" defaultValue="time()" alwaysStopAt="false" />
     <context>
